--- a/views/ConsentPage.pug
+++ b/views/ConsentPage.pug
@@ -14,17 +14,24 @@ html(dir="rtl", lang="en")
         p#ConsentPagetext 
           | שלום,
           br
-          | אנו קבוצת סטודנטים שמקימה אתר ביקורות קורסים באוניברסיטת בן גוריון לסטודנטים מאת סטודנטים. 
-          |המערכת נועדה להיות מערכת סטודנטיאלית לדירוגי קורסים.
+          | אנו קבוצת סטודנטים שמקימה אתר ביקורות קורסים באוניברסיטת בן גוריון לסטודנטים מאת סטודנטים.
+          br 
+          |האתר נועד להיות מערכת סטודנטיאלית לדירוגי קורסים.
+          br
           | לפניכם גרסה נסיונית (גרסאת בטא) לסטודנטים במחלקה להנדסת תעשייה וניהול.
           br
-          | אנחנו רוצים להריץ את גרסאת הבטא בעזרתכם על ידי איסוף ביקורות על קורסי המחלקה. נודה לכם על השתתפותכם.
+          | אנחנו רוצים להריץ את גרסאת הבטא בעזרתכם על ידי איסוף ביקורות על קורסי המחלקה.
+          br
+          | נודה לכם על השתתפותכם.
           br
           br
-          | כל סטודנט שישלים את השתתפותו בהרצה של הפיילוט באמצעות כתיבת 3 ביקורות יקבל נקודת בונוס לציון הסופי של הקורס.
+          |בעמודים  הבאים תתבקשו לכתוב 3 ביקורות על 3 קורסים שונים לבחירתכם.
           br
-          | חשוב להדגיש כי בכל שלב ניתן לפרוש או לסגת מהשתתפות בהרצה,
-          | ואולם סטודנט שלא ישלים את השתתפותו לא יזכה בנקודת הבונוס.
+          |    כל סטודנט שישלים את השתתופו יקבל נקודת בונוס לציון הסופי של הקורס Web/BI/תשתית טכנולוגיות מידע.
+          br
+          | חשוב להדגיש כי בכל שלב ניתן לפרוש או לסגת מהשתתפות.
+          br
+          | ואולם, סטודנט שלא ישלים את השתתפותו לא יזכה בנקודת הבונוס.
 
         
 
