--- a/views/ConsentPage.pug
+++ b/views/ConsentPage.pug
@@ -27,7 +27,7 @@ html(dir="rtl", lang="en")
           br
           |בעמודים  הבאים תתבקשו לכתוב 3 ביקורות על 3 קורסים שונים לבחירתכם.
           br
-          |    כל סטודנט שישלים את השתתופו יקבל נקודת בונוס לציון הסופי של הקורס Web/BI/תשתית טכנולוגיות מידע.
+          |    כל סטודנט שישלים את השתתפותו יקבל נקודת בונוס לציון הסופי של הקורס Web/BI/תשתית טכנולוגיות מידע.
           br
           | חשוב להדגיש כי בכל שלב ניתן לפרוש או לסגת מהשתתפות.
           br
